--- a/discord_bot/package.json
+++ b/discord_bot/package.json
@@ -9,11 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@vercel/postgres": "^0.7.2",
     "next": "14.1.3",
     "openai": "^4.28.4",
-    "pg": "^8.11.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "redis": "^4.6.13"
   }
 }
